# Majestic-Rust-Steel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  MAJESTIC.md  MAJESTIC.md.mjjournal  Majestic-PRD-01-Rust.md.mjjournal  NOTICE.md  README.md  REUSE.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/architect/: Cargo.toml
crates/architect/src/: agent.rs  http.rs  lib.rs  provider.rs
crates/keymaker/: Cargo.toml
crates/keymaker/src/: dispatch.rs  key.rs  keymap.rs  lib.rs  profiles.rs
crates/majestic-agent/: Cargo.toml
crates/majestic-agent/src/: lib.rs  runner.rs  session.rs  tools.rs
crates/majestic-bench/: Cargo.toml
crates/majestic-bench/src/: main.rs
crates/majestic-cli/: Cargo.toml
crates/majestic-cli/src/: lib.rs
crates/majestic-config/: Cargo.toml
crates/majestic-config/src/: lib.rs  schema.ncl
crates/majestic-core/: Cargo.toml
crates/majestic-core/assets/syntaxes/: ion.sublime-syntax  nickel.sublime-syntax  nushell.sublime-syntax  tcsh.sublime-syntax  texinfo.sublime-syntax  wat.sublime-syntax
crates/majestic-core/src/: buffer.rs  code_action.rs  completion.rs  diagnostic.rs  editor.rs  files.rs  finder.rs  fold.rs  fuzzy.rs  git.rs  git_panel.rs  hashline.rs  hover.rs  info.rs  inlay.rs  lib.rs  markdown.rs  occurrence.rs  preview.rs  prompt.rs  references.rs  rename.rs  search.rs  selector.rs  session.rs  signature.rs  symbols.rs  syntax.rs  syntect_hl.rs  texinfo.rs  whichkey.rs  workspace.rs
crates/majestic-daemon/: Cargo.toml
crates/majestic-daemon/src/: daemon.rs  lib.rs  protocol.rs  transport.rs
crates/majestic-lsp/: Cargo.toml
crates/majestic-lsp/src/: client.rs  codec.rs  connection.rs  lib.rs  manager.rs
crates/majestic-steel/: Cargo.toml
crates/majestic-steel/src/: lib.rs
crates/majestic-term/: Cargo.toml
crates/majestic-term/src/: color.rs  lib.rs  pty.rs  terminal.rs
crates/morpheus/: Cargo.toml
crates/morpheus/src/: background.rs  deterministic.rs  event_bus.rs  foreground.rs  lib.rs  task.rs
crates/nova/: Cargo.toml  shell.nix
crates/nova/assets/fonts/: AdwaitaMono-Regular.ttf.license  MaterialIcons-Regular.ttf.license
crates/nova/src/: atlas.rs  lib.rs  main.rs  raster.rs  renderer.rs  window.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: lib.rs
crates/penumbra/: Cargo.toml
crates/penumbra/src/: buffer.rs  layout.rs  lib.rs  render.rs  theme.rs
crates/seraph/: Cargo.toml
crates/seraph/src/: audit.rs  kill_switch.rs  lib.rs  policy.rs  sandbox.rs
crates/stratum/: Cargo.toml
crates/stratum/src/: anchor.rs  hashline.rs  journal.rs  lib.rs  rope.rs  spans.rs  summary.rs  undo.rs
docs/: nova.md  two-views.md
extensions/: README.md  example.scm
i18n/: README.md
mj/: Cargo.toml
mj/src/: agent_host.rs  agent_panel.rs  daemon_host.rs  ed.rs  lib.rs  main.rs  tui.rs
themes/: steelbore.toml
