# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic — TUI-first terminal, editor, and coding agent (binary: mj)."

# `cargo install majestic` installs the `mj` binary (PRD §12).
[[bin]]
name = "mj"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
crossterm = "0.28"
keymaker = { version = "0.0.0", path = "../crates/keymaker" }
majestic-core = { version = "0.0.0", path = "../crates/majestic-core" }
majestic-term = { version = "0.0.0", path = "../crates/majestic-term" }
penumbra = { version = "0.0.0", path = "../crates/penumbra" }
