# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic — TUI-first terminal, editor, and coding agent (binary: mj)."

# `cargo install majestic` installs the `mj` binary (PRD §12).
[[bin]]
name = "mj"
path = "src/main.rs"

[lints]
workspace = true

# Grammar selection is forwarded to majestic-core. The default inherits its lean
# `grammars-common` set (§7 binary-size target); build `--features grammars-all` (or
# `grammars-extra`, or any `lang-*`) for more languages.
[features]
default = []
grammars-common = ["majestic-core/grammars-common"]
grammars-extra = ["majestic-core/grammars-extra"]
grammars-all = ["majestic-core/grammars-all"]

[dependencies]
crossterm = "0.28"
keymaker = { version = "0.0.0", path = "../crates/keymaker" }
majestic-config = { version = "0.0.0", path = "../crates/majestic-config" }
majestic-core = { version = "0.0.0", path = "../crates/majestic-core" }
majestic-daemon = { version = "0.0.0", path = "../crates/majestic-daemon" }
majestic-steel = { version = "0.0.0", path = "../crates/majestic-steel" }
majestic-term = { version = "0.0.0", path = "../crates/majestic-term" }
oracle = { version = "0.0.0", path = "../crates/oracle" }
penumbra = { version = "0.0.0", path = "../crates/penumbra" }
