# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic — TUI-first terminal, editor, and coding agent (binary: mj)."

# The editor as a library, so both front ends — the `mj` TTY binary and the `mj-nova` GPU binary
# (M4) — drive the same `App` (PRD-01 §6.5 renderer parity).
[lib]
name = "majestic"
path = "src/lib.rs"

# `cargo install majestic` installs the `mj` binary (PRD §12).
[[bin]]
name = "mj"
path = "src/main.rs"

[lints]
workspace = true

# Grammar selection is forwarded to majestic-core. The default inherits its lean
# `grammars-common` set (§7 binary-size target); build `--features grammars-all` (or
# `grammars-extra`, or any `lang-*`) for more languages.
[features]
default = ["agent"]
# The governed AI surface (M3). On by default — the agent is core to Majestic. Building with
# `--no-default-features` drops it (and the `ureq`/`http-provider` stack), keeping the binary under
# the §7 25 MB target for size-constrained builds; the agent panel then shows a placeholder.
agent = ["dep:architect", "dep:majestic-agent", "dep:seraph", "architect/http-provider"]
grammars-common = ["majestic-core/grammars-common"]
grammars-extra = ["majestic-core/grammars-extra"]
grammars-all = ["majestic-core/grammars-all"]

[dependencies]
# The governed AI surface (M3), behind the default-on `agent` feature: Architect's loop + provider
# (the real Ollama/OpenAI-compatible HTTP backend, `http-provider` enabled via the `agent` feature),
# the buffer tool bridge + off-thread runner, and Seraph's policy/kill switch. `http-provider` pulls
# `ureq` (HTTP-only, small) — the chief reason the default binary sits just over the §7 25 MB target
# while staying far under the 40 MB CI ceiling; `--no-default-features` drops all of this.
architect = { version = "0.0.0", path = "../crates/architect", optional = true }
majestic-agent = { version = "0.0.0", path = "../crates/majestic-agent", optional = true }
seraph = { version = "0.0.0", path = "../crates/seraph", optional = true }
# `serde` derives Serialize/Deserialize on the event types, so the attach client can forward
# key/resize events to the daemon over the wire.
crossterm = { version = "0.28", features = ["serde"] }
keymaker = { version = "0.0.0", path = "../crates/keymaker" }
majestic-config = { version = "0.0.0", path = "../crates/majestic-config" }
majestic-core = { version = "0.0.0", path = "../crates/majestic-core" }
majestic-daemon = { version = "0.0.0", path = "../crates/majestic-daemon" }
majestic-lsp = { version = "0.0.0", path = "../crates/majestic-lsp" }
majestic-steel = { version = "0.0.0", path = "../crates/majestic-steel" }
majestic-term = { version = "0.0.0", path = "../crates/majestic-term" }
oracle = { version = "0.0.0", path = "../crates/oracle" }
penumbra = { version = "0.0.0", path = "../crates/penumbra" }
# `mj ed` (the line editor, M4) compiles patterns for `/re/` addressing and `s///`. Already linked
# transitively (syntect → fancy-regex → regex), so a direct dependency adds ~no binary size.
regex = "1"
# The attach wire messages (AttachInput / ServerFrame) derive serde.
serde = { version = "1.0.228", features = ["derive"] }
# Reads the `command` field out of a `shell` tool call's JSON arguments for the approval prompt.
serde_json = "1"
