# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "architect"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic agent loop and natural-language terminal surface."

[dependencies]
# The provider abstraction speaks JSON (tool schemas + tool-call arguments), and the
# request/response types serialize to the OpenAI-compatible wire shape a real backend will use.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
