# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "architect"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic agent loop and natural-language terminal surface."

[dependencies]
# The provider abstraction speaks JSON (tool schemas + tool-call arguments), and the
# request/response types serialize to the OpenAI-compatible wire shape a real backend will use.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The governed agent loop gates every tool call through Seraph (policy + audit log + kill switch);
# `jiff` stamps audit entries (Steelbore §12.5). `version =` is required or cargo-deny flags the
# bare path dependency as a wildcard.
seraph = { version = "0.1.0", path = "../seraph" }
jiff = "0.2"
# The real provider speaks OpenAI-compatible HTTP. `ureq` is a small synchronous/blocking client that
# fits the synchronous `Provider` trait; HTTP-only (`default-features = false`, no rustls/ring) keeps
# the dependency tree license-clean and targets local-first servers (Ollama). Optional + off by
# default so the standard build stays lean.
ureq = { version = "2", default-features = false, features = ["json"], optional = true }

[features]
# Enables `HttpProvider` (an OpenAI-compatible HTTP backend). Off by default — local-first, opt-in.
http-provider = ["dep:ureq"]

[lints]
workspace = true
