# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bridges Architect's governed agent loop to the Majestic editor core: the tool surface."

[dependencies]
architect = { version = "0.1.0", path = "../architect" }
majestic-core = { version = "0.1.0", path = "../majestic-core" }
seraph = { version = "0.1.0", path = "../seraph" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `AgentSession::run` stamps audit entries with the wall-clock time (Steelbore §12.5 UTC).
jiff = "0.2"

[lints]
workspace = true
