# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic configuration: Nickel manifest plus Steel config loader, safe mode."

[lints]
workspace = true

[dependencies]
nickel-lang-core = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
# Seraph's agent-governance policy is part of the declarative manifest (PRD #1 §5.2.4); the loader
# deserializes the manifest's `seraph` section straight into `seraph::Policy`.
seraph = { version = "0.1.0", path = "../seraph" }
