# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic core: buffers, windows, modes, commands, sessions."

# rustdoc does not link the native libraries that tree-sitter's build scripts produce, so
# doctests fail to link (the unit-test harness links them fine). Examples are covered by
# unit tests instead.
[lib]
doctest = false

[dependencies]
stratum = { version = "0.0.0", path = "../stratum" }
penumbra = { version = "0.0.0", path = "../penumbra" }
keymaker = { version = "0.0.0", path = "../keymaker" }
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-bash = "0.25.1"
tree-sitter-json = "0.24.8"

[lints]
workspace = true
