# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic core: buffers, windows, modes, commands, sessions."

# rustdoc does not link the native libraries that tree-sitter's build scripts produce, so
# doctests fail to link (the unit-test harness links them fine). Examples are covered by
# unit tests instead.
[lib]
doctest = false

[dependencies]
stratum = { version = "0.0.0", path = "../stratum" }
penumbra = { version = "0.0.0", path = "../penumbra" }
keymaker = { version = "0.0.0", path = "../keymaker" }
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
# Grammars are feature-gated (§7 binary-size target): the lean default ships the common set;
# the rarer languages are opt-in. See [features] below.
tree-sitter-rust = { version = "0.24.2", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.2", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-nix = { version = "0.3.0", optional = true }
tree-sitter-scheme = { version = "0.24.7", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
tree-sitter-erlang = { version = "0.19.0", optional = true }
tree-sitter-powershell = { version = "0.26.4", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
# syntect drives the broad "regex tier" of the hybrid highlighter: ~dozens of languages from a
# compact serialized `.sublime-syntax` set instead of one compiled C grammar each. Pure-Rust
# `regex-fancy` backend (no Oniguruma C) keeps memory-safety first (§3.1). `yaml-load` lets us
# fold in extra `.sublime-syntax` definitions for languages absent from the bundled set.
syntect = { version = "5.3", default-features = false, optional = true, features = [
    "parsing",
    "regex-fancy",
] }
# two-face bundles bat's extended `.sublime-syntax` set (~150 languages) for syntect — the data
# that gives the broad tier its reach without one compiled grammar each. `syntect-fancy` keeps the
# pure-Rust regex backend. It also exposes per-syntax license acknowledgements (§4.2 / §14.3).
two-face = { version = "0.5", default-features = false, optional = true, features = [
    "syntect-fancy",
] }

[features]
# Lean default: the common tree-sitter grammars (structural tier) + syntect (broad regex tier)
# keep the release binary under the §7 25 MB target. Build `--features grammars-all` for every
# tree-sitter grammar; syntect already covers the long tail of languages as data.
default = ["grammars-common", "syntect-highlighting"]
# The broad regex tier (syntect + bat's syntax set via two-face). On by default; disable for a
# tree-sitter-only build.
syntect-highlighting = ["dep:syntect", "dep:two-face"]
grammars-common = ["lang-rust", "lang-python", "lang-go", "lang-c", "lang-bash", "lang-json"]
grammars-extra = [
    "lang-nix",
    "lang-scheme",
    "lang-elixir",
    "lang-erlang",
    "lang-powershell",
    "lang-typescript",
]
grammars-all = ["grammars-common", "grammars-extra"]

# Per-language features — enable exactly the grammars a build needs.
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-go = ["dep:tree-sitter-go"]
lang-c = ["dep:tree-sitter-c"]
lang-bash = ["dep:tree-sitter-bash"]
lang-json = ["dep:tree-sitter-json"]
lang-nix = ["dep:tree-sitter-nix"]
lang-scheme = ["dep:tree-sitter-scheme"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-erlang = ["dep:tree-sitter-erlang"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-typescript = ["dep:tree-sitter-typescript"]

[lints]
workspace = true
