# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic LSP client: JSON-RPC over a language server's stdio (PRD #1 §6.9)."

[dependencies]
# The manager converts server diagnostics into the editor's `Diagnostic` (byte ranges). No cycle:
# majestic-core does not depend on majestic-lsp.
majestic-core = { version = "0.0.0", path = "../majestic-core" }
morpheus = { version = "0.0.0", path = "../morpheus" }
# The canonical LSP type definitions (initialize, sync, diagnostics, hover, …). Types-only.
lsp-types = "0.97"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
