# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "majestic-term"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic integrated terminal widget (wraps alacritty_terminal)."

[lints]
workspace = true

[dependencies]
alacritty_terminal = "0.26.0"
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
penumbra = { version = "0.1.0", path = "../penumbra" }
