# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nova"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic GPU renderer (wgpu + cosmic-text)."

[dependencies]
# The shared layout layer: Nova renders the same cell `Buffer` Penumbra emits to a TTY
# (PRD-01 §6.5 renderer parity). Always built — the pure `Scene` model keeps `--workspace` cheap.
penumbra = { version = "0.1.0", path = "../penumbra" }

# The GPU stack, behind the default-off `gpu` feature so `--workspace` gates don't rebuild it
# (docs/nova.md §4). winit 0.30 (ApplicationHandler), wgpu's safe `create_surface` (no unsafe,
# §6.1), pollster to block on wgpu's async init, bytemuck to cast vertex/instance data to bytes,
# cosmic-text to shape + rasterise glyphs (M4.3). wgpu pinned to 26 — see docs/nova.md §3.
wgpu = { version = "26", optional = true }
winit = { version = "0.30", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }
cosmic-text = { version = "0.19", optional = true }

# The live editor (M4.4): `mj-nova` drives the same `App` the TTY does (the `majestic` lib), building a
# workspace (`majestic-core`) and mapping winit keys to `keymaker::KeyPress`. wasm-bindgen-compatible
# with wgpu 26 (both admit the 0.2.100 Nickel pins) — see docs/nova.md §3.
majestic = { version = "0.1.0", path = "../../mj", optional = true }
majestic-core = { version = "0.1.0", path = "../majestic-core", optional = true }
keymaker = { version = "0.1.0", path = "../keymaker", optional = true }

# System-clipboard integration for the GUI (M4 polish): mirror copies/cuts out and pastes in. Best
# effort — if it cannot reach the compositor's clipboard, the editor's own kill-ring still works.
arboard = { version = "3", optional = true }

[features]
# Off by default: the cheap workspace gate builds only the pure `Scene` model. Build the GPU
# renderer + the `mj-nova` binary deliberately with `cargo build -p nova --features gpu`.
gpu = [
    "dep:wgpu",
    "dep:winit",
    "dep:pollster",
    "dep:bytemuck",
    "dep:cosmic-text",
    "dep:majestic",
    "dep:majestic-core",
    "dep:keymaker",
    "dep:arboard",
]

# The GPU window front end. `required-features` keeps it out of a `gpu`-off (`--workspace`) build,
# so the cheap gate never pulls wgpu/winit.
[[bin]]
name = "mj-nova"
path = "src/main.rs"
required-features = ["gpu"]

[lints]
workspace = true
