# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "seraph"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic AI guardrail and policy engine."

[dependencies]
# Tamper-evident audit log (PRD #1 §5.2.4): BLAKE3 chains each entry; `jiff` gives the mandated
# ISO-8601 UTC `Z` timestamps (Steelbore §12.5); serde persists the log as JSONL.
blake3 = "1"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The command sandbox splits a command line into program + args WITHOUT a shell, so shell
# metacharacters (`;`, `|`, `>`, `$(…)`) are inert.
shlex = "1"

# Process-group timeout kill for the sandbox — `nix` provides a *safe* `killpg` wrapper, so the
# sandbox needs no `unsafe` (PRD §6.1 `#![deny(unsafe_code)]`, C1 has no exceptions). Unix only.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[lints]
workspace = true
