# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "stratum"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Majestic text core: rope, snapshots, anchors, spans, undo tree, journal."

[dependencies]
# Hashline agent-edit tags (PRD #1 §5.2.5): BLAKE3 over a line's content. Default features (std only,
# no rayon) keep the footprint small; the SIMD backend is selected at build time, not via a feature.
blake3 = "1"

[lints]
workspace = true
